development/minikube/resources/minikube/dev/2/infra-resources.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    labels:
      istio-injection: enabled
      kubenix/project-name: kubenix
    name: dev-infra
    namespace: default
- apiVersion: sources.nachocano.org/v1alpha1
  kind: BitBucketSource
  metadata:
    labels:
      kubenix/project-name: kubenix
    name: bitbucket-source-sample
    namespace: dev-infra
  spec:
    consumerKey:
      secretKeyRef:
        key: consumerKey
        name: bitbucket-secret
    consumerSecret:
      secretKeyRef:
        key: consumerSecret
        name: bitbucket-secret
    eventTypes:
    - repo:push
    - repo:commit_status_created
    ownerAndRepository: digitalrigbitbucketteam/embracing-nix-docker-k8s-helm-knative
    sink:
      apiVersion: tekton.dev/v1alpha1
      kind: PipelineRun
      metadata:
        labels:
          app: health
          component: frontend
          tag: __TAG__
      spec:
        pipelineRef:
          name: build-and-deploy-pipeline
- apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRoleBinding
  metadata:
    labels:
      kubenix/project-name: kubenix
    name: tekton-pipeline-runner
    namespace: default
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: ClusterRole
    name: cluster-admin
  subjects:
  - kind: ServiceAccount
    name: bitbucket-controller-manager
    namespace: knative-sources
kind: List
labels:
