development/minikube/resources/minikube/dev/2/overridings-resources.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    labels:
      istio-injection: enabled
      kubenix/project-name: kubenix
    name: dev-infra
    namespace: default
- apiVersion: serving.knative.dev/v1alpha1
  kind: Service
  metadata:
    labels:
      kubenix/project-name: kubenix
    name: bitbucket-message-dumper
    namespace: dev-infra
  spec:
    template:
      spec:
        containers:
        - image: gcr.io/knative-releases/github.com/knative/eventing-sources/cmd/message_dumper
          imagePullPolicy: Never
- apiVersion: serving.knative.dev/v1alpha1
  kind: Service
  metadata:
    labels:
      kubenix/project-name: kubenix
    name: bitbucket-source-sample
    namespace: dev-infra
  spec:
    consumerKey:
      secretKeyRef:
        key: consumerKey
        name: bitbucket-secret
    consumerSecret:
      secretKeyRef:
        key: consumerSecret
        name: bitbucket-secret
    eventTypes:
    - repo:push
    - repo:commit_status_created
    ownerAndRepository: digitalrigbitbucketteam/embracing-nix-docker-k8s-helm-knative
    sink:
      apiVersion: serving.knative.dev/v1alpha1
      kind: Service
      name: bitbucket-message-dumper
- apiVersion: networking.istio.io/v1alpha3
  kind: Gateway
  metadata:
    labels:
      kubenix/project-name: kubenix
    name: knative-ingress-gateway
    namespace: knative-serving
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - '*.nip.io'
      port:
        name: http-system
        number: 80
        protocol: HTTP
    - hosts:
      - '*.nip.io'
      port:
        name: https-system
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        privateKey: /etc/istio/ingressgateway-certs/tls.key
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
- apiVersion: v1
  data:
    tls.cert: ''
    tls.key: ''
  kind: Secret
  metadata:
    labels:
      kubenix/project-name: kubenix
    name: istio-ingressgateway-certs
    namespace: istio-system
  type: kubernetes.io/tls
kind: List
labels:
